--- a/src/main/webapp/nav.xhtml
+++ b/src/main/webapp/nav.xhtml
@@ -20,8 +20,9 @@
 				</div>
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="empList.xhtml">Employés</a></li>
-					<li ><a href="projectManagerList.xhtml">Chef Projet</a></li>
-					<li><a href="listProjects.xhtml">Projets</a></li>
+					<li ><a href="projectManagerList.xhtml">Chef Projets</a></li>
+					<li ><a href="organizationList.xhtml">Organisations</a></li>
+					<li><a href="projectList.xhtml">Projets</a></li>
 				</ul> 
 			</div>
 		</nav>
