--- a/src/main/webapp/nav.xhtml
+++ b/src/main/webapp/nav.xhtml
@@ -23,6 +23,7 @@
 					<li ><a href="projectManagerList.xhtml">Chef Projets</a></li>
 					<li ><a href="organizationList.xhtml">Organisations</a></li>
 					<li><a href="projectList.xhtml">Projets</a></li>
+					<li><a href="phaseList.xhtml">Phases</a></li>
 				</ul> 
 			</div>
 		</nav>
