--- a/src/main/webapp/updateProjectManager.xhtml
+++ b/src/main/webapp/updateProjectManager.xhtml
@@ -8,19 +8,19 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
-	<title>Formulaire de modification de employé</title>
+	<title><h:outputText value="#{msg.pm_update_title}" /></title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </h:head>
 <h:body>
 	<ui:include src="nav.xhtml"></ui:include>
 	<div class="container-fluid col-lg-6">
 		<h3>
-			<h:outputText value="#{msg.register_form_home}" />
+			<h:outputText value="#{msg.pm_update_title}" />
 		</h3>
 		<div class="form-group">
 			<h:form>
 				<h4>
-					<h:outputText value="#{msg.register_form_msg}" />
+					<h:outputText value="#{msg.pm_update_title}" />
 				</h4>
 
 				<h:inputHidden value="#{ctrProjectManagerBean.pmDataBean.id}"
